--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.13",
     "firebase": "^12.3.0",
     "react": "^19.1.1",
@@ -17,7 +18,8 @@
     "react-hook-form": "^7.63.0",
     "react-router": "^7.9.1",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
